--- a/composer.json
+++ b/composer.json
@@ -37,7 +37,10 @@
         "psr-4": {
             "Imsus\\ImgProxy\\": "src/",
             "Imsus\\ImgProxy\\Database\\Factories\\": "database/factories/"
-        }
+        },
+        "files": [
+            "src/helpers.php"
+        ]
     },
     "autoload-dev": {
         "psr-4": {
