--- a/composer.json
+++ b/composer.json
@@ -76,8 +76,7 @@
     "extra": {
         "laravel": {
             "providers": [
-                "Imsus\\ImgProxy\\ImgProxyServiceProvider",
-                "Workbench\\App\\Providers\\WorkbenchServiceProvider"
+                "Imsus\\ImgProxy\\ImgProxyServiceProvider"
             ],
             "aliases": {
                 "ImgProxy": "Imsus\\ImgProxy\\Facades\\ImgProxy"
