--- a/composer.json
+++ b/composer.json
@@ -26,9 +26,10 @@
         "spatie/laravel-package-tools": "^1.19"
     },
     "require-dev": {
+        "filament/forms": "*",
+        "larastan/larastan": "^2.9",
         "laravel/pint": "^v1.21",
         "nunomaduro/collision": "^8.1.1||^7.10.0",
-        "larastan/larastan": "^2.9",
         "orchestra/testbench": "^9.0.0||^8.22.0",
         "pestphp/pest": "^2.34",
         "pestphp/pest-plugin-arch": "^2.8",
