--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,6 +2,8 @@
 
 services:
   imagor:
+    #image: shumc/imagor:latest
+    #image: ghcr.io/cshum/imagor-mozjpeg:docker-variants@sha256:80637bfd1c5307364c8fca73bf8863a6d29fa06b1e7b9b67eb08962e7331c30e
     build:
       context: ./imagor_docker
       # dockerfile: Dockerfile_00_default
